<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.text.encryption.rsa.rsaencryption.ui.add.AddContentViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.text.encryption.rsa.rsaencryption.ui.add.AddContentActivity">



        <RelativeLayout
            android:id="@+id/top_navigation"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/background_gradient">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/add_new"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:onClick="@{viewModel::onClickBackToHomePage}">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/icon_arrow_back"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_arrow_back" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/home_page"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap"
                    android:layout_gravity="center"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:background="@drawable/background_save_button"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap"
                android:onClick="@{viewModel::onClickSave}"
                android:layout_centerVertical="true">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/encrypt"
                    android:textColor="@color/colorPrimary"
                    android:paddingStart="16dp"
                    android:paddingEnd="12dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_gravity="center"/>

            </LinearLayout>


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/top_navigation"
            android:orientation="vertical"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:id="@+id/input_layout">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/title"
                android:textColor="@color/red01"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edit_text"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@={viewModel.title}"/>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/content"
                    android:textColor="@color/red01"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
                    tools:ignore="RelativeOverlap" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/open_text_file"
                    android:textColor="@color/red01"
                    android:textSize="16sp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/background_open_text_file_button"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    tools:ignore="RelativeOverlap"
                    android:onClick="@{viewModel::onClickOpenTextFile}"/>

            </RelativeLayout>

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edit_text"
                android:gravity="top"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:text="@={viewModel.textContent}"/>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blackAlpha035"
            android:id="@+id/encryption_choose_level_layout"
            android:visibility="gone"
            android:onClick="@{viewModel::onClickBlackView}">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_encryption_level_button_container_layout"
                android:paddingTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:id="@+id/progress_layout"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:text="@string/encrypting"
                    android:textSize="18sp"
                    android:textColor="@color/red01"
                    android:fontFamily="@font/roboto"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:paddingTop="16dp"
                android:paddingBottom="32dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/background_encryption_level_button_container_layout"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:id="@+id/level_button_container"
                android:visibility="visible">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_encryption_level"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@color/red01"
                    android:textSize="18sp"
                    android:layout_marginBottom="16dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/red01"
                    android:layout_marginBottom="8dp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/encryption_level_1"
                    android:textColor="@color/white"
                    android:background="@drawable/background_encryption_level_button"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:onClick="@{viewModel::onClickLevel_1}"/>
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/encryption_level_2"
                    android:textColor="@color/white"
                    android:background="@drawable/background_encryption_level_button"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"
                    android:onClick="@{viewModel::onClickLevel_2}"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/encryption_level_3"
                    android:textColor="@color/white"
                    android:background="@drawable/background_encryption_level_button"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"
                    android:onClick="@{viewModel::onClickLevel_3}"/>


            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</layout>

