<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.text.encryption.rsa.rsaencryption.ui.details.DetailsViewModel"/>

    </data>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.text.encryption.rsa.rsaencryption.ui.details.DetailsActivity">

    <RelativeLayout
        android:id="@+id/top_navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_gradient">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_bold"
            android:text="@{viewModel.title}"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap"
            android:layout_toEndOf="@id/back_to_home_button"
            android:layout_toStartOf="@id/decrypt_button"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"/>

        <LinearLayout
            android:id="@+id/back_to_home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:onClick="@{viewModel::onClickBackToHomePage}">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/icon_arrow_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_arrow_back" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/home_page"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap"
                android:layout_gravity="center"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/background_save_button"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap"
            android:layout_centerVertical="true"
            android:id="@+id/decrypt_button"
            android:onClick="@{viewModel::onClickDecrypt}">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrypt"
                android:textColor="@color/colorPrimary"
                android:paddingStart="16dp"
                android:paddingEnd="12dp"
                android:gravity="center"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_bold"
                android:layout_gravity="center"/>

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_navigation"
        android:layout_above="@id/delete_button"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:id="@+id/input_layout">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/title"
            android:textColor="@color/red01"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/roboto"
            android:text="@{viewModel.title}"/>


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/content"
                android:textColor="@color/red01"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                tools:ignore="RelativeOverlap" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/content_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/roboto"
            android:layout_marginBottom="16dp"
            android:text="@{viewModel.textContent}"
            android:scrollbars="vertical"/>




    </LinearLayout>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/delete"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/white"
        android:background="@color/orange01"
        android:onClick="@{viewModel::onClickDelete}"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackAlpha035"
        android:id="@+id/black_view"
        android:visibility="gone"
        android:onClick="@{viewModel::onClickBlackView}">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/background_encryption_level_button_container_layout"
            android:paddingTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:id="@+id/progress_layout"
            android:visibility="visible">

            <ProgressBar
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/decrypting"
                android:textSize="18sp"
                android:textColor="@color/red01"
                android:fontFamily="@font/roboto"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
</layout>